--- a/views/form.ejs
+++ b/views/form.ejs
@@ -8,9 +8,9 @@
 <body>
     <h1>Adicionar usuário</h1>
     <form action="/adduser" method="post">
-        <imput id="form_name" name="form_name" placeholder="Nome" required >
+        <input id="form_name" name="form_name" placeholder="Nome" required >
 
-        </imput id="form_email" name="form_email" placeholder="E-mail:" required>
+        </input id="form_email" name="form_email" placeholder="E-mail:" required>
 
         <button>Adicionar</button>
 
